# nihar-opinion

./: .gitignore  ASSUMPTIONS.md  Anchor.toml  Cargo.toml  DECISIONS.md  NEXT_STEPS.md  README.md  env.example  package.json  test-integration.html  tsconfig.json
backend/: package.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/database/: database.module.ts
backend/src/database/entities/: market.entity.ts  order.entity.ts  position.entity.ts
backend/src/indexer/: indexer.module.ts  indexer.service.ts
backend/src/markets/: markets.controller.ts  markets.module.ts  markets.service.ts
backend/src/markets/dto/: create-market.dto.ts  update-market.dto.ts
backend/src/orders/: orders.controller.ts  orders.module.ts  orders.service.ts
backend/src/orders/dto/: create-order.dto.ts
backend/src/positions/: positions.controller.ts  positions.module.ts  positions.service.ts
backend/src/positions/dto/: create-position.dto.ts
backend/src/solana/: solana.config.ts  solana.module.ts  solana.service.ts
backend/src/websocket/: websocket.gateway.ts  websocket.module.ts
contract/: Cargo.toml
contract/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
contract/src/instructions/: add_liquidity.rs  buy_shares.rs  claim_winnings.rs  collect_fees.rs  create_market.rs  initialize.rs  mod.rs  remove_liquidity.rs  resolve_market.rs  sell_shares.rs  update_admin.rs
scripts/: deploy.sh
tests/api/: live-api-tests.js
tests/integration/: market.test.ts
tests/unit/: lslmsr.test.js
