[package]
name = "opinion-market"
version = "0.1.0"
description = "Opinion Market with LS-LMSR on Solana"
edition = "2021"

resolver = "2"
[lib]
crate-type = ["cdylib", "lib"]
name = "opinion_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0.2"
spl-associated-token-account = "2.3.0"
solana-program = "1.17.14" 